--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -51,10 +51,10 @@
     .page-title {
         margin: 0 auto 15px;
         a {
-            font-family: Mrs Saint Delafield;
+            font-family: Patua One;
             font-size: 70px;
             text-decoration: none;
-            text-shadow: 1px 1px 5px rgba($color-black, 0.3);
+            font-weight: normal;
         }
     }
 
