--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -51,10 +51,10 @@
     .page-title {
         margin: 0 auto 15px;
         a {
-            font-family: Patua One;
+            font-family: Josefin Sans;
             font-size: 70px;
             text-decoration: none;
-            font-weight: normal;
+            font-weight: 300;
         }
     }
 
